Implemented EliminatingEpsilonFreePredicates